// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RTL should arrow navigate 1`] = `
"<!-- wp:paragraph -->
<p>٠١٢</p>
<!-- /wp:paragraph -->"
`;

exports[`RTL should arrow navigate between blocks 1`] = `
"<!-- wp:paragraph -->
<p>٠<br>١</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>٠<br>١<br>٢</p>
<!-- /wp:paragraph -->"
`;

exports[`RTL should merge backward 1`] = `
"<!-- wp:paragraph -->
<p>٠١</p>
<!-- /wp:paragraph -->"
`;

exports[`RTL should merge forward 1`] = `
"<!-- wp:paragraph -->
<p>٠١</p>
<!-- /wp:paragraph -->"
`;

exports[`RTL should navigate inline boundaries 1`] = `
"<!-- wp:paragraph -->
<p><strong>١</strong>٠٢</p>
<!-- /wp:paragraph -->"
`;

exports[`RTL should navigate inline boundaries 2`] = `
"<!-- wp:paragraph -->
<p><strong>١٠</strong>٢</p>
<!-- /wp:paragraph -->"
`;

exports[`RTL should navigate inline boundaries 3`] = `
"<!-- wp:paragraph -->
<p><strong>٠١</strong>٢</p>
<!-- /wp:paragraph -->"
`;

exports[`RTL should navigate inline boundaries 4`] = `
"<!-- wp:paragraph -->
<p>٠<strong>١</strong>٢</p>
<!-- /wp:paragraph -->"
`;

exports[`RTL should split 1`] = `
"<!-- wp:paragraph -->
<p>٠</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>١</p>
<!-- /wp:paragraph -->"
`;
